--- a/bin/install
+++ b/bin/install
@@ -4,7 +4,7 @@ install_me() {
   local install_type=$1
   local version=$2
   local install_path=$3
-  source_path=https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-${version}.tar.gz
+  source_path=https://github.com/elastic/elasticsearch/archive/v${version}.tar.gz
   tmpd=$(mktemp -d); cd $tmpd; 
   curl -L $source_path -o ${version}.tar.gz
   tar -xzf ${version}.tar.gz
